WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154480
bmalloc: Chunk, Page, and Line don't need to be class templates
https://bugs.webkit.org/show_bug.cgi?id=154480
Summary
bmalloc: Chunk, Page, and Line don't need to be class templates
Geoffrey Garen
Reported
2016-02-19 16:56:50 PST
bmalloc: Chunk, Page, and Line don't need to be class templates
Attachments
Patch
(48.13 KB, patch)
2016-02-19 16:58 PST
,
Geoffrey Garen
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2016-02-19 16:58:36 PST
Created
attachment 271824
[details]
Patch
Geoffrey Garen
Comment 2
2016-02-19 17:05:42 PST
Comment on
attachment 271824
[details]
Patch Gavin reviewed this.
Geoffrey Garen
Comment 3
2016-02-19 17:06:44 PST
Committed
r196847
: <
http://trac.webkit.org/changeset/196847
>
Csaba Osztrogonác
Comment 4
2016-03-01 10:49:04 PST
(In reply to
comment #3
)
> Committed
r196847
: <
http://trac.webkit.org/changeset/196847
>
Just to document, trivial buildfix landed in
http://trac.webkit.org/changeset/196856
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug